versioned_docs/version-5.11.4/useMergeRefs.md
---
id: useMergeRefs
title: useMergeRefs
sidebar_label: useMergeRefs
---

## About

Merges any number of refs into a single ref

[//]: # "Main"

## Installation

    npm install --save rooks

## Importing the hook

```javascript
import { useMergeRefs } from "rooks";
```

## Usage

```jsx
function Demo() {
  const mousedownRef = useEventListenerRef("mousedown", () => {
    console.log("mouse down");
  });
  const mouseupRef = useEventListenerRef("mouseup", () => {
    console.log("mouse up");
  });
  const ref = useMergeRefs(mousedownRef, mouseupRef);

  return (
    <div>
      <h1>Rooks : useMergeRefs Example</h1>
      <hr></hr>
      <div ref={ref}>
        A div with multiple refs. Click me!!
      </div>
    </div>
  );
}

render(<Demo />);
```

### Arguments

| Argument value | Type  | Description                                                          |
|----------------|-------|----------------------------------------------------------------------|
| refs           | Array | Takes any number of refs. Refs can be mutable refs or function refs. |

### Returns

| Return value | Type        | Description |
|--------------|-------------|-------------|
| ref          | CallbackRef | Merged ref  |



---

## Codesandbox Examples

### Basic Usage

<iframe src="https://codesandbox.io/embed/usemergerefs-rk7m1?fontsize=14&hidenavigation=1&theme=dark"
  style={{
    width: "100%",
    height: 500,
    border: 0,
    borderRadius: 4,
    overflow: "hidden"
  }} 
  title="useMergeRefs"
  allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
/>

## Join Bhargav's discord server

You can click on the floating discord icon at the bottom right of the screen and talk to us in our server.
